<resources>
    <string name="app_name">ObjectCommunityApp</string>
    <string name="username">이메일</string>
    <string name="password">비밀번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="login">로그인</string>

    <string name="not_registered">가입하려면?</string>
    <string name="register">회원가입</string>

    <string name="already_registered">로그인하러면?</string>
    <string name="login_activity">로그인</string>

    <string name="member">회원정보</string>
    <string name="name">이름</string>
    <string name="date">생년월일</string>
    <string name="phone">전화번호</string>
    <string name="Address">주소</string>

    <string name="passwordreset">비밀번호 찾기</string>

    <string name="ok">확인</string>
    <string name="objectcommunityapp">ObjectCommunityApp</string>
    <string name="search">검색어</string>
    <string name="sarch_OK">검색</string>
    <string name="logout">로그아웃</string>
    <string name="ch_memberinfo">회원정보변경</string>
    <string name="banner_ad">로고_광고배너</string>
    <string name="writing">글쓰기</string>
    <string name="singo">신고</string>
    <string name="title">제목</string>
    <string name="story">내용</string>
    <string name="comment">댓글</string>
    <string name="chsh_ok">캐시백확인</string>
</resources>
