<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/objectcommunityapp"
        android:textColor="#000000"
        android:textSize="35dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/member"
        android:textColor="#000000"
        android:textSize="35dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/member_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>
    <EditText
        android:id="@+id/member_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"/>
    <EditText
        android:id="@+id/member_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"/>
    <EditText
        android:id="@+id/member_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/Address"/>
    <Button
        android:id="@+id/member_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"/>
</LinearLayout>