<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/img_background"><![CDATA[
    ?xml version="1.0" encoding="utf-8"?>
    ]]>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:textSize="35dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/objectcommunityapp"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:background="#00FFFFFf"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />
    <Button
        android:id="@+id/button_pass_reset"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#00ffffff"
        android:textStyle="bold"
        android:text="@string/passwordreset"
        android:textSize="18sp"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:paddingRight="10dp"
            android:text="@string/already_registered"/>
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/login_activity"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:paddingRight="10dp"
            android:text="@string/not_registered"/>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>