<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ResisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:textSize="40dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/objectcommunityapp"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="#00FFFFFf"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789@._-"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFf"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789~!@#$%^*_-"
        android:maxLength="20"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFf"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"
        android:digits="abcdefghijklmnopqrstuvwxyz0123456789~!@#$%^*_-"
        android:maxLength="20"
        android:maxLines="1"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:checked="false"
        android:text="약관 동의"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/button_register"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#00ffffff"
        android:textStyle="bold"
        android:text="@string/register"
        android:textSize="18sp"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/login_activity"/>
    </LinearLayout>

</LinearLayout>